--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -10,7 +10,7 @@
         <script src="{% static "js/jquery.js" %}"></script>
     </head>
     <body>
-        <h1>Rango says ...</h1>
+        <h1>Rango says...</h1>
         <div>hey there partner!</div>
 
         <div>
@@ -47,7 +47,7 @@
 
 
         <div>
-            <a href="/rango/about">about Rango</a><br />
+            <a href="/rango/about">about</a><br />
             <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /><!--New Line -->
         </div>
     </body>
