--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -22,5 +22,11 @@
     {% endif %}
     </div>
 
+    <div>
+        {% if category %}
+            <a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a><br/>
+        {% endif %}
+            <a href="/rango/">Index</a><br/>
+    </div>
 </body>
 </html>
