--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -47,8 +47,10 @@
 
 
         <div>
+                        <a href="/rango/add_category/">Add a New Category</a>
             <a href="/rango/about">about</a><br />
             <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /><!--New Line -->
         </div>
+
     </body>
 </html>
