--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,19 +1,15 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 {% load staticfiles %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>this tutorial has been put together by Mingfeng YE!</title>
-</head>
-<body>
-    <h1>Rango says ...</h1>
-        <div>
-            hey there partner! <br />
-            <strong>{{boldmessage}}</strong><br />
-        </div>
-        <div>
-            <a href="/rango/index">index</a><br />
-           <img src="{{ MEDIA_URL}}cat.jpg" alt="Picture of cat" /><!--New Line -->
-        </div>
-</body>
+<html>
+
+    <head>
+        <title>Rango</title>
+    </head>
+
+    <body>
+        <h1>About Page</h1>
+        This tutorial has been put together by Mingfeng YE
+        <a href="/rango/">index</a><br />
+        <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+    </body>
 </html>
