--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-	<html>
-	    <head>
-	        <title>Rango</title>
-	    </head>
-	    <body>
-			{% if category %}
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+{% block title_block %}
+        Add Page
+{% endblock %}
 
-	        <h1>Add a Page to {{category.name}}</h1>
+{% block body_block %}
+    <div>
+			    {% if category %}
+                    <h1>Add a Page to {{category.name}}</h1>
 	        <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
 	            {% csrf_token %}
 	            {% for hidden in form.hidden_fields %}
@@ -24,5 +25,5 @@
 				The specified category does not exist!
 			{% endif%}
 
-	    </body>
-	</html>
+    </div>
+{% endblock %}
