--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,15 +1,15 @@
-<!DOCTYPE HTML>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
-<html>
+{% block title_block %}
+        About
+{% endblock %}
 
-    <head>
-        <title>Rango</title>
-    </head>
+{% block body_block %}
 
-    <body>
-        <h1>About Page</h1>
-        This tutorial has been put together by Mingfeng YE
-        <a href="/rango/">index</a><br />
-        <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
-    </body>
-</html>
+    <h1>About Page</h1>
+    This tutorial has been put together by Mingfeng YE
+    <!--
+    <a href="/rango/">index</a><br /> -->
+    <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+
+{% endblock %}
