--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Rango</title>
-    </head>
-    <body>
-        <h1>Add a Category</h1>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+{% block title_block %}
+    Add Category
+{% endblock %}
+
+{% block body_block %}
+
         <div>
+            <h1>Add a Category</h1>
             <form id="category_form" method="post" action="/rango/add_category/">
                 {% csrf_token %}
                 {% for hidden in form.hidden_fields %}
@@ -21,5 +22,5 @@
             </form>
         </div>
 
-    </body>
-</html>
+
+{% endblock %}
