--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -8,7 +8,11 @@
     <div>
         <h1>Rango says...</h1>
 
-			hey there partner!
+			{% if user.is_authenticated %}
+                hello {{ user.username }}!
+            {% else %}
+                hey there partner!
+            {% endif %}
     </div>
 		<div>
 			<div>
