--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -48,7 +48,7 @@
 
 
 		<div>
-
+        <p>visits: {{ visits }}</p>
         <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
 	</div>
 {% endblock %}
