--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -8,6 +8,7 @@
 
     <h1>About Page</h1>
     This tutorial has been put together by Mingfeng YE
+    <p>visits: {{ visits }}</p>
     <!--
     <a href="/rango/">index</a><br /> -->
     <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
